list-and-objects

--- a/objects/02-cars/index.html
+++ b/objects/02-cars/index.html
@@ -8,5 +8,5 @@
 	<body>
 		<h1>Cars</h1>
 	</body>
-	<script src="main.js" defer type="text/javascript"></script>
+	<script src="main-don.js" defer type="text/javascript"></script>
 </html>
